<resources>
    <string name="app_name">Heart Rate &amp; Blood Pressure Monitor</string>
    <string name="heart_rate_blood_pressure_monitor"><![CDATA[Heart Rate & Blood Pressure Monitor]]></string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="image">Image</string>
    <string name="info">Info</string>
    <string name="insights">Insights</string>
    <string name="enter_your_weight_kg">Enter your weight (kg)</string>
    <string name="enter_your_height_cm">Enter your height (cm)</string>
    <string name="not_known">Not Known</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="update_profile">Update profile</string>
    <string name="greeting">Hello, Phong</string>
    <string name="icon">Icon</string>
    <string name="heart_rate">Heart rate</string>
    <string name="manually">Manually</string>
    <string name="create_a_user">Create a user</string>
    <string name="let_create_first_user">Please help fill in your precise information for us to provide you appropriate suggestions</string>
    <string name="heart_rate_content">Measure your pulse rate with real-time information about your heart\'s performance.</string>
    <string name="heart_rate_button_content">Measure Now</string>
    <string name="default_height">170</string>
    <string name="default_weight">60</string>
    <string name="name">Name</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="year_of_birth_2">Year of Birth: </string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/not_known</item>
    </string-array>
    <string name="photo">Photo</string>
    <string name="dashboard">Dashboard</string>
    <string name="intro_title_1">Track blood pressure</string>
    <string name="intro_title_2">Health knowledge</string>
    <string name="intro_title_3">Analyze data</string>
    <string name="intro_content_1">Keep track of your blood pressure readings over time and provide insights to you.</string>
    <string name="intro_content_2">The application provides foundational knowledge about blood pressure based on reputable research.</string>
    <string name="intro_content_3">Analyze real-life data to provide an in-depth and visual understanding of your health.</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome!</string>
    <string name="measure_your_pulse_rate_with_real_time_information_about_your_heart_s_performance">Measure your pulse rate with real-time information about your heart\'s performance.</string>
    <string name="measure_now">Measure Now</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_pressure_content">Keep track of your blood pressure readings over time and provide insights to you.</string>
    <string name="blood_pressure_button_content">Track Now</string>
    <string name="weight_and_bmi">Weight &amp; BMI</string>
    <string name="weight_and_bmi_content">Keep track of your weight and monitor your progress towards achieving your goals.</string>
    <string name="weight_and_bmi_button_content">Calculate Now</string>
    <string name="button">Button</string>
    <string name="systole">SYS</string>
    <string name="ex_170">Ex: 170</string>
    <string name="ex_60">Ex: 60</string>
    <string name="ex_85">Ex: 85</string>
    <string name="diastole">DIA</string>
    <string name="pulse">PULSE</string>
    <string name="measure">Measure</string>
    <string name="result">Result</string>
    <string name="_80">80</string>
    <string name="measured_at_17_00pm_21_04_2023">Measured at 17:00PM 21.04.2023</string>
    <string name="year_of_birth_2000">Year of Birth: 2000</string>
    <string name="height_170">Height: 170cm\n</string>
    <string name="weight_75">Weight: 75kg</string>
    <string name="hypertension_stage_1">Hypertension Stage 1</string>
    <string name="systole_range_elevated">(120 – 129)</string>
    <string name="systole_range_normal">(&lt; 120)</string>
    <string name="systole_range_hypertension_stage_1">(120 – 139)</string>
    <string name="systole_range_hypertension_stage_2">(140 – 179)</string>
    <string name="systole_range_emergency_care_needed">(>180)</string>
    <string name="diastole_range_normal_and_elevated">(&lt; 80)</string>
    <string name="diastole_range_hypertension_stage_1">(80 – 89)</string>
    <string name="diastole_range_hypertension_stage_2">(90 – 100)</string>
    <string name="diastole_range_emergency_care_needed">(>100)</string>
    <string name="recommendations">RECOMMENDATIONS</string>
    <string name="weight">"Weight: "</string>
    <string name="kg">kg</string>
    <string name="height">"Height: "</string>
    <string name="cm">cm</string>
    <string name="diastole_warning">It should be between 30 and 120, which is the diastolic range used by this tool.</string>
    <string name="systole_warning">It should be between 70 and 250, which is the systolic range used by this tool.</string>
    <string name="systole_lower_diastole">Check both your numbers. Systolic must higher than diastolic.</string>
    <string name="normal">Normal</string>
    <string name="elevated">Elevated</string>
    <string name="hypertension_stage_2">Hypertension Stage 2</string>
    <string name="emergency_care_needed">Emergeny care needed</string>
    <string name="recommendations_hypertension_stage_1">Many people with high blood pressure can lower their blood pressure into a healthy range or keep their numbers in a healthy range by making lifestyle changes.Here is some suggestion: \n• Getting at least 150 minutes of physical activity each week (about 30 minutes a day, 5 days a week) \n• Not smoking \n• Eating a healthy diet, including limiting sodium (salt) and alcohol \n• Keeping a healthy weight \n• Managing stress \n
    </string>
    <string name="recommendations_normal">Here are some tips to improve your blood pressure.\n • Drink more water. Dehydration can cause temporary drop in blood pressure.\n• Follow a healthy diet. Increase salt content in food if you have Low blood pressure.\n• If the pressure is low and you are taking any medication – check their side effects.\n• Eat small low carb meals.\n• Avoid alcohol consumption or have it only in moderation.\n• Include some form of exercise in your daily routine. Exercises such as brisk walking and swimming can help in circulation of blood. Besides it keeps you young both in your mind and body and is a great de-stressor.</string>
    <string name="recommendations_hypertension_stage_2">Here are some tips to reduce your blood pressure.\n • Quit smoking. Besides damaging your lungs smoking constricts blood vessels and increases your blood pressure making it hard for your heart to beat.\n• Avoid alcohol consumption or have it only in moderation. Alcohol increases your blood pressure to unhealthy levels.\n• Follow a healthy diet. Avoid too much salt in food.\n• Lose weight. Obese people are more likely to suffer from high blood pressure.\n• Exercise regularly. It helps prevent High blood pressure and Diabetes. Besides it keeps you young both in your mind and body and is a great de-stressor.\n• Drink enough water daily.\n• Avoid stress.</string>
    <string name="recommendations_hypertension_stage_3">Here are some tips to reduce your blood pressure.\n • Quit smoking. Besides damaging your lungs smoking constricts blood vessels and increases your blood pressure making it hard for your heart to beat.\n• Avoid alcohol consumption or have it only in moderation. Alcohol increases your blood pressure to unhealthy levels.\n• Follow a healthy diet. Avoid too much salt in food.\n• Lose weight. Obese people are more likely to suffer from high blood pressure.\n• Exercise regularly. It helps prevent High blood pressure and Diabetes. Besides it keeps you young both in your mind and body and is a great de-stressor.\n• Drink enough water daily.\n• Avoid stress.</string>
    <string name="recommendations_emergency_care_needed">Here are some tips to reduce your blood pressure.\n • Quit smoking. Besides damaging your lungs smoking constricts blood vessels and increases your blood pressure making it hard for your heart to beat.\n• Avoid alcohol consumption or have it only in moderation. Alcohol increases your blood pressure to unhealthy levels.\n• Follow a healthy diet. Avoid too much salt in food.\n• Lose weight. Obese people are more likely to suffer from high blood pressure.\n• Exercise regularly. It helps prevent High blood pressure and Diabetes. Besides it keeps you young both in your mind and body and is a great de-stressor.\n• Drink enough water daily.\n• Avoid stress.</string>
    <string name="measured_at">Measured at</string>
    <string name="measured_at_format">Measured at: %s</string>
    <string name="good_morning">Good morning !</string>
    <string name="good_afternoon">Good afternoon !</string>
    <string name="good_evening">Good evening !</string>
    <string name="dashboard_intro_fragment">Dashboard Intro Fragment</string>
    <string name="your_recently_action">Your recently action</string>
    <string name="more_detail">More detail</string>
    <string name="suggestion">Suggestion</string>
    <string name="default_suggestion">Mr.Phong need to record a Blood Pressure right now!</string>
    <string name="action">Action</string>
    <string name="profile_select">Profile select</string>
    <string name="user_management">User management</string>
    <string name="insights_blood_pressure_fragment">Insights Blood Pressure Fragment</string>
    <string name="search">Search</string>
    <string name="your_health_condition">Your health condition</string>
    <string name="your_heart_rate_is_so_hight">Your heart rate is so high. You should sit down to keep calm. Regular exercise, such as brisk walking, jogging, cycling, or swimming, can help to improve your cardiovascular health.</string>
    <string name="totals">Totals</string>
    <string name="view_result">View result</string>
    <string name="information_knowledge"><![CDATA[Information & Knowledge]]></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_your_information">Edit your information</string>
    <string name="update">Update</string>
    <string name="blood_pressure_edit_fragment">Blood Pressure Edit Fragment</string>
    <string name="oops_there_is_an_error_try_again">Oops, there is an error happening. Try again later!</string>
    <string name="this_result_will_be_deleted_forever_are_you_sure">This result will be deleted forever. Are you sure?</string>
    <string name="a_normal_blood_pressure">A normal blood pressure level is less than 120/80 mmHg. No matter your age, you can take steps each day to keep your blood pressure in a healthy range.</string>
    <string name="blood_pressure_advice">Blood pressure advice</string>
    <string name="how_to_improve_weight_better">How to improve weight better</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="hint_input_height">Ex: 170</string>
    <string name="hint_input_weight">Ex: 60</string>
    <string name="create">Create</string>
    <string name="title_no_data">There’s no data here!</string>
    <string name="content_no_data">Let\'s measure your  Heart Rate right now!</string>
</resources>