<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/intro_title_1"
            android:textAlignment="center"
            android:textColor="#870026"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/intro_content_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_28sdp"
            android:contentDescription="@string/photo"
            android:src="@drawable/ic_intro_1" />
    </LinearLayout>
</layout>