<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileEditFragment"
            type="com.blood.ui.fragments.profile.ProfileEditFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileCreateActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="34dp"
                    android:paddingTop="60dp"
                    android:text="@{profileEditFragment.args.editMode ? @string/update_profile : @string/create_new_profile}"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/color_text_special"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:paddingVertical="20dp"
                    android:text="@string/let_create_first_user"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/color_text_normal"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/bg_fff5f8_radius_20"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="30dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="30dp"
                    android:textColorHint="@color/color_hint">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/color_text_normal"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:autofillHints=""
                        android:background="@drawable/background_edit_text"
                        android:hint="@string/enter_your_name"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint"
                        android:textSize="14sp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year_of_birth"
                        android:textColor="@color/color_text_normal"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sprYearOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/background_edit_text"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/color_text_normal"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sprGender"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/background_edit_text"
                        android:drawableStart="@drawable/ic_logo"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/height_cm"
                        android:textColor="@color/color_text_normal"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtHeight"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:autofillHints=""
                        android:background="@drawable/background_edit_text"
                        android:hint="@string/hint_input_height"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:nextFocusDown="@id/edtWeight"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint"
                        android:textSize="14sp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_kg"
                        android:textColor="@color/color_text_normal"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtWeight"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginVertical="10dp"
                        android:autofillHints=""
                        android:background="@drawable/background_edit_text"
                        android:hint="@string/hint_input_weight"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="3"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/color_hint"
                        android:textSize="14sp"
                        tools:ignore="LabelFor" />
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/background_button_accept"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/flBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp">

            <include layout="@layout/layout_banner_control" />
        </FrameLayout>

    </LinearLayout>
</layout>