<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.blood.ui.fragments.insight.InsightViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_12sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:padding="18dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/button"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/blood_pressure"
                android:textColor="@color/color_text_special"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:visibleIfNotEmpty="@{viewModel.listBloodObserver}">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llNoData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="38dp"
                    android:paddingEnd="38dp"
                    android:visibility="gone"
                    app:visibleIfEmpty="@{viewModel.listBloodObserver}">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/title_no_data"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:paddingHorizontal="48dp"
                        android:text="@string/content_no_data"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_heart_separate" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMeasureNow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/bg_white_radius_10_strok_1_fa50f7"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/measure_now"
                        android:textAllCaps="false"
                        android:textColor="@color/color_FA507F"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/flAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <include layout="@layout/layout_shimmer_native_small" />

        </FrameLayout>
    </LinearLayout>
</layout>